--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: CMake setup
-      run: /usr/bin/cmake -S . -B build
     - name: make
-      run: /usr/bin/cmake --build build
+      run: make
